# bitra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitra  build.sh  run.sh
.useless/: bitra.cpp
include/: gamestate.h  inputhandler.h  menu.h  player.h  window.h
src/: gamestate.cpp  inputHandler.cpp  main.cpp  menu.cpp  player.cpp
useless/: player.cpp
